--- a/PROYECTO SEMESTRAL/Exclusivo PC/BATTLE TECH.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/BATTLE TECH.html
@@ -26,27 +26,41 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/PC/BattleTech.png" alt="sin imagen">
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> </p>
+            <p>BattleTech es una franquicia de ciencia ficción y juegos de guerra 
+                (también designados por el anglicismo wargames) creada por FASA Corporation y, actualmente, propiedad de WizKids.
+                 La serie comenzó en 1984 cuando se lanzó al mercado en Estados Unidos el juego de tablero BattleDroids. Lucasfilm 
+                 exigió en ese momento que el juego fuera rebautizado o retirado de la venta porque los derechos de la palabra droid
+                  eran y son de su propiedad. Al año siguiente, en 1985, FASA publicó entonces la segunda edición de BattleDroids,
+                   pero esta vez con el título que el juego ha conservado hasta ahora, BattleTech. Desde entonces ha crecido hasta
+                    abarcar diversos campos de entretenimiento mediante numerosos suplementos para el juego original, varios videojuegos,
+                     un juego de cartas coleccionables, una vasta serie de novelas de ciencia ficción y una serie de dibujos animados,
+                      entre otros productos.</p>
             </div></div>
 
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <H2>Plataformas</H2><br>
-                <p> </p>
-                <P> </P>
+                <p>° PC </p>
+                <P></P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
+                <a href="https://www.youtube.com/watch?v=tsIMfOo_VO0" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="" target="_blank">
-                    <img src="" alt="Juego PC" class="logoY"></a></p>
+                <h2 class="centrar" >Tiendas disponibles</h2><br>
+                <p class="centrar" ><a href="https://store.steampowered.com/app/637090/BATTLETECH/?l=spanish&cc=PT" target="_blank">
+                    <img src="../img/PC/logoSteam.jpg" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://www.g2a.com/es/battletech-steam-key-global-i10000149680001" target="_blank">
+                <img src="../img/PC/logoG2A.png" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://www.eneba.com/latam/steam-battletech-steam-key-global" target="_blank">
+                    <img src="../img/PC/logoEneba.png" alt="Juego PC" class="logoY"></a></p>
+                
+                
             </div>
         </div>
 
