--- a/PROYECTO SEMESTRAL/Exclusivo PC/BLACK MESA.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/BLACK MESA.html
@@ -26,27 +26,38 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/PC/Black Mesa.jpg" alt="sin imagen">
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> </p>
+            <p>Black Mesa (previamente conocido como Black Mesa: Source) es un videojuego de disparos en primera persona desarrollado y publicado
+                 por Crowbar Collective. Es una nueva versión del videojuego Half-Life que utiliza el motor gráfico Source. Fue originalmente publicado 
+                 como un mod gratuito en septiembre de 2012 y luego fue aprobado por Valve (los desarrolladores de Half-Life) para su lanzamiento comercial
+                 . La versión comercial fue publicada como un título de acceso anticipado en mayo de 2015 y su versión completa fue lanzada en marzo de 2020
+                  para las plataformas Microsoft Windows y Linux. Black Mesa es un videojuego de disparos en primera persona que requiere que el jugador realice
+                   tareas de combate y resuelva varios acertijos para avanzar en el videojuego. Desde el punto de vista del diseño, la jugabilidad principal permanece
+                    en gran medida sin cambios desde el videojuego base original Half-Life; el jugador puede llevar una cantidad de armas que encuentra en el transcurso 
+                    del videojuego, aunque también debe localizar y controlar la munición para la mayoría de las armas. </p>
             </div></div>
 
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <H2>Plataformas</H2><br>
-                <p> </p>
+                <p>° PC </p>
                 <P> </P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
+                <a href="https://www.youtube.com/watch?v=V7vDsarvyoc" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="" target="_blank">
-                    <img src="" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://store.steampowered.com/app/362890/Black_Mesa/?l=spanish" target="_blank">
+                    <img src="../img/PC/logoSteam.jpg" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://www.g2a.com/es/black-mesa-steam-key-global-i10000006953007" target="_blank">
+                    <img src="../img/PC/logoG2A.png" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://www.eneba.com/latam/steam-black-mesa-steam-key-global" target="_blank">
+                    <img src="../img/PC/logoEneba.png" alt="Juego PC" class="logoY"></a></p>
             </div>
         </div>
 
