--- a/PROYECTO SEMESTRAL/Exclusivo PC/COUNTER STRIKE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/COUNTER STRIKE.html
@@ -26,27 +26,41 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/PC/counter strike.webp" alt="sin imagen">
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> </p>
+            <p>Counter-Strike: Global Offensive (CS:GO) es un videojuego de disparos en primera persona desarrollado
+                 por Valve Corporation y Hidden Path Entertainment. Es el cuarto juego de la saga Counter-Strike. 
+                 Fue lanzado al mercado en agosto de 2012 para las plataformas de Microsoft Windows, macOS.
+                  La versión para Linux estuvo disponible al público en septiembre de 2014.
+                El juego consiste en dos equipos, los Terroristas y los Antiterroristas (T y CT, respectivamente),
+                 los cuales se enfrentan entre ellos en diferentes modos de juego. El modo más común es en el cual el bando Terrorista 
+                 tienen que plantar y defender una bomba mientras los Antiterroristas defender las zonas de plante de la bomba y su posterior 
+                 desactivación. Hay 9 modos de juego oficiales, cada uno con sus características específicas. El juego también tiene un sistema de emparejamiento,
+                  que permite a los jugadores demostrar su nivel en servidores dedicados de la propia desarrolladora, además de servidores creados por la comunidad.
+                   A finales de 2018, CS:GO se unió a la moda de los Battle-Royale sacando su propio modo de juego, "Danger-Zone". </p>
             </div></div>
 
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <H2>Plataformas</H2><br>
-                <p> </p>
+                <p>° PC </p>
                 <P> </P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
+                <a href="https://www.youtube.com/watch?v=edYCtaNueQY" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="" target="_blank">
-                    <img src="" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/?l=spanish" target="_blank">
+                    <img src="../img/PC/logoSteam.jpg" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://www.g2a.com/es/counter-strike-global-offensive-prime-status-upgrade-steam-key-global-i10000016291021" target="_blank">
+                <img src="../img/PC/logoG2A.png" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://www.eneba.com/es/steam-counter-strike-global-offensive-steam-key-europe" target="_blank">
+                    <img src="../img/PC/logoEneba.png" alt="Juego PC" class="logoY"></a></p>
+                
             </div>
         </div>
 
