--- a/PROYECTO SEMESTRAL/Exclusivo PC/CRUSADER KINGS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/CRUSADER KINGS.html
@@ -26,27 +26,43 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/PC/Crusader Kings III.jpg" alt="sin imagen">
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> </p>
+            <p>El juego, tal como sus predecesores Crusader Kings y Crusader Kings II, es un juego de gran estrategia y
+                 un simulador de dinastías ambientado en la Edad Media, entre la era vikinga y la caída de Constantinopla.
+                  A diferencia de su predecesor, a fecha de la publicación, sólo tiene dos fechas de inicio: 867 y 1066. Las dinastías
+                   pueden formar ramas cadete que tienen sus propios jefes y actúan independientemente de la dinastía padre. Los jefes 
+                   de dinastía serán capaces de hacer acciones para retomar el control sobre la nueva dinastía. Por ejemplo, los jefes de 
+                   dinastía son los encargados de legitimar a los hijos bastardos.
+                Los caracteres tienen cuerpos completos, renderizados en 3D, en vez de retratos en 2D Como en Cruzader Kings II, tienen
+                 rasgos que afectan a sus estadísticas y su comportamiento. Tomar decisiones que van contra los rasgos de un personaje aumentará 
+                 su nivel de estrés. El sistema de genética del juego permite a los personajes pasarle algunos de sus rasgos a sus hijos. Los personajes
+                  son capaces de asustar a sus vasallos para permanecer leales con su pavor, el cual aumenta cuándo el carácter comete acciones malévolas,
+                   como ejecutar o torturar a otros personajes. Los caracteres son capaces de seleccionar uno de los cinco estilos de vida disponibles. Cada
+                    estilo de vida tiene tres árboles de habilidad que permiten a los caracteres escoger sus habilidades según su estilo de vida. </p>
             </div></div>
 
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <H2>Plataformas</H2><br>
-                <p> </p>
+                <p>° PC </p>
                 <P> </P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
+                <a href="https://www.youtube.com/watch?v=Demi3MfHHYw" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="" target="_blank">
-                    <img src="" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://store.steampowered.com/app/1158310/Crusader_Kings_III/?l=spanish" target="_blank">
+                    <img src="../img/PC/logoSteam.jpg" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://www.g2a.com/es/crusader-kings-iii-pc-steam-key-global-i10000195605007" target="_blank">
+                <img src="../img/PC/logoG2A.png" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://www.eneba.com/latam/steam-crusader-kings-iii-steam-key-global" target="_blank">
+                    <img src="../img/PC/logoEneba.png" alt="Juego PC" class="logoY"></a></p>
+                
             </div>
         </div>
 
