--- a/PROYECTO SEMESTRAL/Exclusivo PC/DOTA 2.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/DOTA 2.html
@@ -26,27 +26,33 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/PC/Dota 2.jpg" alt="sin imagen">
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> </p>
+            <p>Dota 2 es un videojuego gratuito del género ARTS (Estrategia de Acción en Tiempo Real) también conocido como MOBA
+                 (Multiplayer Online Battle Arena) distribuido por la plataforma Steam de Valve.
+                El origen de Dota 2 se remonta a StarCraft, en concreto Aeon of Strife (AoS), un mapa personalizado y el primer
+                 MOBA de todos. Posteriormente, con el lanzamiento de Warcraft III y como una modificación del mismo, se creó “Defense
+                  Of The Ancients” (DOTA) por los propios usuarios del juego. Entre ellos IceFrog, mientras que su compañero Guinsoo
+                   decidió tomar otro camino con el exitoso juego League of Legends. </p>
             </div></div>
 
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <H2>Plataformas</H2><br>
-                <p> </p>
+                <p>° PC</p>
                 <P> </P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
+                <a href="https://www.youtube.com/watch?v=-cSFPIwMEq4" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="" target="_blank">
-                    <img src="" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://store.steampowered.com/app/570/Dota_2/?l=spanish" target="_blank">
+                    <img src="../img/PC/logoSteam.jpg" alt="Juego PC" class="logoY"></a></p>
+                
             </div>
         </div>
 
