--- a/PROYECTO SEMESTRAL/Exclusivo PC/EUROPA UNIVERSALIS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/EUROPA UNIVERSALIS.html
@@ -26,27 +26,43 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/PC/Europa Universalis IV.jpg" alt="sin imagen">
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> </p>
+            <p>Europa Universalis IV es un videojuego de estrategia 4X desarrollado por Paradox Development Studio y publicado
+                 por Paradox Interactive. Fue anunciado en agosto de 2012 y se puso a la venta el 13 de agosto de 2013.
+                El juego mantiene el mismo estilo de juego que las entregas anteriores, y la campaña principal comienza el
+                 11 de noviembre de 1444 un día después del fin de la Batalla de Varna y finaliza el 2 de enero de 1821.
+                 El juego está ambientado principalmente en la era de los descubrimientos y la colonización del nuevo mundo. 
+                 Comienza en el contexto histórico del final de la Guerra de los Cien Años y la caída del Imperio Bizantino y continúa a
+                  través de las revoluciones de las trece colonias y francesa, y concluye tras las Guerras Napoleónicas. Sin embargo, durante
+                   el desarrollo del juego, las decisiones del jugador alterarán radicalmente el curso de la historia, por lo que hacia el
+                    final del juego gran parte del mundo diferirá, en gran medida, de la realidad. Cientos de naciones de este periodo están
+                     disponibles, desde las superpotencias como España, Francia, Inglaterra o el Imperio Otomano hasta las potencias regionales 
+                     como Persia y Baviera y otros grupos como los nativos americanos y las civilizaciones orientales y africanas. </p>
             </div></div>
 
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <H2>Plataformas</H2><br>
-                <p> </p>
+                <p>° PC </p>
                 <P> </P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
+                <a href="https://www.youtube.com/watch?v=hWQ8AXwHPQg" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="" target="_blank">
-                    <img src="" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://store.steampowered.com/app/236850/Europa_Universalis_IV/?l=spanish" target="_blank">
+                    <img src="../img/PC/logoSteam.jpg" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://www.g2a.com/es/europa-universalis-iv-steam-key-global-i10000014547006" target="_blank">
+                <img src="../img/PC/logoG2A.png" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://www.eneba.com/latam/steam-europa-universalis-iv-steam-key-global" target="_blank">
+                    <img src="../img/PC/logoEneba.png" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://store.epicgames.com/es-ES/p/europa-universalis-iv" target="_blank">
+                    <img src="../img/PC/logoEpic.png" alt="Juego PC" class="logoY"></a></p>
             </div>
         </div>
 
