--- a/PROYECTO SEMESTRAL/Exclusivo PC/EVE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/EVE.html
@@ -26,27 +26,39 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/PC/EVE Online.jpg" alt="sin imagen">
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> </p>
+            <p>Eve Online es un MMORPG-RTS ambientado en el espacio. El jugador es capaz de pilotar diferentes naves
+                 espaciales recorriendo una parte de una galaxia a través de más de 7.800 sistemas estelares.Los 
+                 sistemas estelares están conectados a otros sistemas por puertas de salto (stargates o jumpgates).
+                  Los sistemas estelares contienen diferentes elementos, como: estrellas, planetas, lunas, cinturones 
+                  de asteroides, estaciones espaciales, etc.
+                Los jugadores de Eve Online se encuentran en un único servidor, y son capaces de usar diferente
+                s actividades y profesiones, como por ejemplo minería, fabricación, comercio y combate (tanto PvE como PvP).
+                 El nivel de las habilidades de los jugadores se consigue mediante un sistema de entrenamiento de habilidades 
+                 basado en tiempo real, este sistema funciona aunque no se esté conectado al juego.
+                El juego fue desarrollado y mantenido por la compañía islandesa CCP Games. El primer lanzamiento del juego 
+                fue en Norteamérica y Europa en mayo del 2003, fue publicado desde mayo a diciembre del 2003 por Simon & Schuster
+                 Interactive, después CCP volvió a obtener los derechos y empezó a publicar el juego mediante distribución digital. E
+                 l 22 de enero del 2008, se anunció que el juego se distribuiría a través de Steam. </p>
             </div></div>
 
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <H2>Plataformas</H2><br>
-                <p> </p>
+                <p>° PC </p>
                 <P> </P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
+                <a href="https://www.youtube.com/watch?v=bQAhxJEZamc" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="" target="_blank">
-                    <img src="" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://store.steampowered.com/app/8500/EVE_Online/?l=spanish" target="_blank">
+                    <img src="../img/PC/logoSteam.jpg" alt="Juego PC" class="logoY"></a></p>
             </div>
         </div>
 
