--- a/PROYECTO SEMESTRAL/Exclusivo PC/H1Z1.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/H1Z1.html
@@ -26,27 +26,39 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/PC/h1z1.jpg" alt="sin imagen">
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> </p>
+            <p>H1Z1 es un videojuego battle royale multijugador (MMO) desarrollado por la empresa Daybreak Game Company
+                 (anteriormente Sony Online Entertainment). El juego se encuentra disponible para Microsoft Windows, la
+                  plataforma Steam y en PlayStation Network.
+                El 28 de febrero de 2018, el juego fue lanzado oficialmente, dejando atrás su etapa de acceso anticipado 
+                en Steam tras tres años.El 8 de marzo de 2018, a poco más de una semana de su lanzamiento oficial, se
+                 anunció que H1Z1 se convertiría en un juego free to play El modo de juego en tercera persona hace hincapié 
+                 en la cooperación de varios jugadores, el comercio y la formación de equipos. En una entrevista con Adam 
+                 Clegg, de Sony Online Entertainment, se dejó claro que a diferencia de otros juegos de zombis multijugador
+                  masivos en línea, el enfoque principal será la supervivencia del jugador contra la capacidad de crear objetos(Crafting). </p>
             </div></div>
 
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <H2>Plataformas</H2><br>
-                <p> </p>
+                <p>° PC </p>
                 <P> </P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
+                <a href="https://www.youtube.com/watch?v=Vd-yKnavZNA" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="" target="_blank">
-                    <img src="" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://store.steampowered.com/app/433850/Z1_Battle_Royale/?l=spanish" target="_blank">
+                    <img src="../img/PC/logoSteam.jpg" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://www.g2a.com/es/h1z1-premium-steam-key-global-i10000042202005" target="_blank">
+                <img src="../img/PC/logoG2A.png" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://www.eneba.com/latam/steam-h1z1-battle-royale-pack-gold-limited-edition-dlc-steam-key-global" target="_blank">
+                    <img src="../img/PC/logoEneba.png" alt="Juego PC" class="logoY"></a></p>
             </div>
         </div>
 
