--- a/PROYECTO SEMESTRAL/Exclusivo PC/HALF-LIFE ALYX.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/HALF-LIFE ALYX.html
@@ -26,27 +26,38 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/PC/Half-Life Alyx.jpg" alt="sin imagen">
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> </p>
+            <p>Half-Life: Alyx es el regreso de Valve en realidad virtual a la serie Half-Life. Es la historia de una lucha
+                 imposible contra una raza alienígena cruel conocida como la Alianza, situada entre los eventos de Half-Life y Half-Life 2.
+                Jugando como Alyx Vance, eres la única oportunidad de supervivencia de la humanidad. El control de
+                 la Alianza sobre el planeta desde el incidente de Black Mesa solo se ha fortalecido a medida que
+                  acorralan a los habitantes que quedan en las ciudades. Entre ellos se encuentran algunos de los 
+                  mejores científicos de la Tierra: tú y tu padre, el Dr. Eli Vance.
+                Como fundadores de una resistencia incipiente, han continuado su actividad científica clandestina,
+                 realizando investigaciones críticas y construyendo herramientas invaluables para los pocos humanos
+                  lo suficientemente valientes como para desafiar a la Alianza.
+                Todos los días, aprendes más sobre tu enemigo, y cada día trabajas para encontrar su punto débil. </p>
             </div></div>
 
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <H2>Plataformas</H2><br>
-                <p> </p>
+                <p>° PC </p>
                 <P> </P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
+                <a href="https://www.youtube.com/watch?v=O2W0N3uKXmo" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="" target="_blank">
-                    <img src="" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://store.steampowered.com/app/546560/HalfLife_Alyx/?l=spanish" target="_blank">
+                    <img src="../img/PC/logoSteam.jpg" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://www.g2a.com/es/half-life-alyx-pc-steam-account-global-i10000192575006" target="_blank">
+                <img src="../img/PC/logoG2A.png" alt="Juego PC" class="logoY"></a></p>
             </div>
         </div>
 
