--- a/PROYECTO SEMESTRAL/Exclusivo PC/PACIFY.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/PACIFY.html
@@ -26,27 +26,40 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/PC/pacify.jpg" alt="sin imagen">
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> </p>
+            <p>Acaba de iniciar sesión con PAH Inc. Paranormal Activity Helpers Incorporated, sí, suena cursi, pero la paga es excelente.
+                 Dijeron que nunca estarás en ningún peligro real, y tienen un montón de trabajo ahora mismo. Tu primer trabajo es en una
+                  vieja casa encantada. Hay un agente que quiere poner la casa en venta, pero con todos en la ciudad difundiendo rumores
+                   de que el mal vive dentro de la casa, necesita alguna prueba de que es segura. La verdad es que parece atemorizado De 
+                   todos modos, contrató a PAH Inc. para revisar el lugar. Puedes ir solo a verlo si quieres, pero yo me llevaría al menos
+                    3 amigos más. Revisa el lugar y, si hay algo sobrenatural, intenta traer pruebas a PAH Inc.
+                Juega solo en el modo de jugador único, o juega con hasta 3 amigos más en el modo multijugador. En el modo multijugador,
+                 puedes elegir jugar con o contra tus amigos. Lee las notas en busca de pistas sobre calmar a la chica. Encuentra y usa
+                  llaves, muñecas, madera y cerillas para ayudarte en tu camino. La niña puede oírte y verte. Mantente fuera de la vista,
+                   y permanece lo más tranquilo posible. Prueba diferentes tipos de estrategias para ganar. </p>
             </div></div>
 
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <H2>Plataformas</H2><br>
-                <p> </p>
+                <p>° PC </p>
                 <P> </P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
+                <a href="https://www.youtube.com/watch?v=1xBIiAXAv0k" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="" target="_blank">
-                    <img src="" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://store.steampowered.com/app/967050/Pacify/?l=spanish" target="_blank">
+                    <img src="../img/PC/logoSteam.jpg" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://www.g2a.com/es/pacify-steam-key-global-i10000183117001" target="_blank">
+                <img src="../img/PC/logoG2A.png" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://www.eneba.com/latam/steam-pacify" target="_blank">
+                    <img src="../img/PC/logoEneba.png" alt="Juego PC" class="logoY"></a></p>
             </div>
         </div>
 
