--- a/PROYECTO SEMESTRAL/Exclusivo PC/WARFACE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/WARFACE.html
@@ -26,27 +26,35 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/PC/warface.jpg" alt="sin imagen">
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> </p>
+            <p>Warface es un juego de disparos militar construido sobre una base de disparos satisfactorios, movimientos hábiles y efectos visuales nítidos.
+                PCGamesN
+                Warface es un juego de disparos en primera persona de aspecto arenoso que se centra principalmente en el modo multijugador en línea. 
+                No presenta habilidades como correr por las paredes, mochilas propulsoras o ataques especiales, pero eso no perjudica el juego. Adopta
+                 el tipo de juego más realista, con botas sobre el terreno.
+                Tendencia de juego
+                Warface se enfoca igualmente en un puñado de modos de juego PvP, así como en modos de juego cooperativo, 
+                como operaciones especiales que requerirán una planificación deliberada y trabajo en equipo si quieres tener éxito.
+                Botón Seleccionar </p>
             </div></div>
 
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <H2>Plataformas</H2><br>
-                <p> </p>
+                <p>° PC </p>
                 <P> </P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
+                <a href="https://www.youtube.com/watch?v=YibaiJb2LOo" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="" target="_blank">
-                    <img src="" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://store.steampowered.com/app/291480/Warface/?l=spanish" target="_blank">
+                    <img src="../img/PC/logoSteam.jpg" alt="Juego PC" class="logoY"></a></p>  
             </div>
         </div>
 
