--- a/PROYECTO SEMESTRAL/Exclusivo PC/pc.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/pc.html
@@ -41,7 +41,7 @@
         </div><br><br>
 
         <div class="row">
-            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/TEAM FOREST.html" ><img src="../img/PC/team forest.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">TEAM FOREST</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/TEAM FOREST.html" ><img src="../img/PC/team forest.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">TEAM FOREST 2</p></a></div>
             <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/PALADINS.html" ><img src="../img/PC/paladins.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">PALADINS</p></a></div>
             <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/WARFACE.html" ><img src="../img/PC/warface.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">WARFACE</p></a></div>
             <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/HALF-LIFE ALYX.html" ><img src="../img/PC/Half-Life Alyx.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">HALF-LIFE ALYX</p></a></div>
