--- a/PROYECTO SEMESTRAL/Exclusivo PC/DEVOUR.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/DEVOUR.html
@@ -26,27 +26,38 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/PC/devour.jpg" alt="sin imagen">
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> </p>
+            <p>DEVOUR es un juego cooperativo de supervivencia para 1-4 jugadores. Detén a los poseídos miembros
+                 del culto antes de que te arrastren al infierno. Corre, Grita, Escondete, Evita ser atrapado. Modo cooperativo de 1-4 jugadores.
+                 Toma el control de hasta 4 miembros del culto en esta experiencia cooperativa única donde deberán trabajar juntos para detener 
+                 a los cultitas poseídos, que intentarán llevarte al infierno. Modo un jugador
+                 Solo para jugadores veteranos. En este modo de juego, gritarás por ti mismo. Jugabilidad desafiante
+                 Ninguna partida de DEVOUR es igual. Para detener al mal, necesitarás un equipo concentrado y una ejecución perfecta, con una sesión de juego mínima de una hora. </p>
             </div></div>
 
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <H2>Plataformas</H2><br>
-                <p> </p>
+                <p>° PC</p>
                 <P> </P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
+                <a href="https://www.youtube.com/watch?v=mIridrRzU3w" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="" target="_blank">
-                    <img src="" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://store.steampowered.com/app/1274570/DEVOUR/?l=latam" target="_blank">
+                    <img src="../img/PC/logoSteam.jpg" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://www.g2a.com/es/devour-pc-steam-gift-global-i10000236708005" target="_blank">
+                <img src="../img/PC/logoG2A.png" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://www.eneba.com/latam/steam-devour-steam-key-global" target="_blank">
+                    <img src="../img/PC/logoEneba.png" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://store.epicgames.com/es-ES/p/devour-d62a36" target="_blank">
+                    <img src="../img/PC/logoEpic.png" alt="Juego PC" class="logoY"></a></p>
             </div>
         </div>
 
