--- a/PROYECTO SEMESTRAL/Exclusivo PC/LEAGUE OF LEGENDS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/LEAGUE OF LEGENDS.html
@@ -26,27 +26,39 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/PC/LEAGUE OF LEGENDS.jpg" alt="sin imagen">
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> </p>
+            <p>League of Legends (también conocido por sus siglas LoL), es un videojuego multijugador de arena de batalla en 
+                línea desarrollado y publicado por Riot Games. Inspirándose en Defense of the Ancients, un mapa personalizado
+                 para Warcraft III, los fundadores de Riot buscaron desarrollar un juego independiente del mismo género. Desde
+                  su lanzamiento en octubre de 2009, LoL ha sido un juego gratuito y se monetiza a través de la compra de elementos 
+                  para la personalización de personajes. El juego está disponible para Microsoft Windows y macOS.
+                En el juego, dos equipos de cinco jugadores luchan en un combate jugador contra jugador, cada equipo ocupando y
+                 defendiendo su mitad del mapa. Cada uno de los diez jugadores controla un personaje, conocido como "campeón",
+                  con habilidades únicas y diferentes estilos de juego. Durante una partida, los campeones se vuelven más poderosos
+                   acumulando puntos de experiencia y ganando oro que se emplea para la compra de artículos para derrotar al equipo
+                    contrario. En el modo principal de juego de LoL, League, "La Grieta del Invocador", un equipo gana al abrirse
+                     paso hasta la base enemiga y destruir su "nexo", una gran estructura ubicada dentro de la cual se emanan tres
+                      líneas de súbditos o "minions", personajes no jugadores que al ser eliminados por el equipo enemigo otorgan oro y experiencia. </p>
             </div></div>
 
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <H2>Plataformas</H2><br>
-                <p> </p>
+                <p>° PC </p>
                 <P> </P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
+                <a href="https://www.youtube.com/watch?v=nOVxF0FEk9A" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="" target="_blank">
-                    <img src="" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://www.leagueoflegends.com/es-es/" target="_blank">
+                    <img src="../img/PC/logoLol.jpg" alt="Juego PC" class="logoY"></a></p>
+                
             </div>
         </div>
 
