--- a/PROYECTO SEMESTRAL/Exclusivo PC/PALADINS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/PALADINS.html
@@ -26,27 +26,38 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/PC/paladins.jpg" alt="sin imagen">
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> </p>
+            <p>Paladins: Champions of the Realm es un videojuego gratuito en línea de disparos en primera persona con componentes de hero shooter.
+                El 9 de octubre de 2012 Hi-Rez anunció estar trabajando en dos nuevos juegos que serían los sucesores de Global Agenda (otro juego
+                 de la compañía) varios años después se anunciaría paladins, que sería el primero de estos juegos el otro sería rogue company, 
+                 el 4 de agosto del 2015 comenzaron las inscripciones para participar en una beta cerrada después de estar en alpha por 2 meses,
+                  posteriormente en la TwitchCon 2015 se anunció que el juego sería lanzado como beta abierta pero esto fue retrasado hasta 16 de 
+                  septiembre de 2016, como un producto de acceso anticipado de Evil Mojo Games.
+                La beta cerrada comenzó el 17 de noviembre de 2015. El juego entró en beta abierta el 16 de septiembre de 2016. El 6 de mayo del
+                 2017 se lanzó la beta abierta para las plataformas de PS4 y Xbox One. En septiembre de 2017 se anunció que el juego había alcanzado
+                  más de 15 millones de jugadores. El 1 de mayo de 2018 se anunció que el juego saldría oficialmente el 8 de mayo del mismo año, para 
+                  PlayStation 4, Xbox One, Microsoft Windows y Mac. El juego fue lanzado en Nintendo Switch el 12 de junio de 2018 </p>
             </div></div>
 
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <H2>Plataformas</H2><br>
-                <p> </p>
+                <p>° PC </p>
                 <P> </P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
+                <a href="https://www.youtube.com/watch?v=g4WHiMVq1-8" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="" target="_blank">
-                    <img src="" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://store.steampowered.com/app/444090/Paladins/?l=spanish" target="_blank">
+                    <img src="../img/PC/logoSteam.jpg" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://www.g2a.com/es/paladins-crystals-key-global-200-crystals-i10000030144007" target="_blank">
+                <img src="../img/PC/logoG2A.png" alt="Juego PC" class="logoY"></a></p>
             </div>
         </div>
 
