--- a/PROYECTO SEMESTRAL/Exclusivo PC/TEAM FOREST.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/TEAM FOREST.html
@@ -26,27 +26,38 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/PC/team forest.jpg" alt="sin imagen">
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> </p>
+            <p>Team Fortress 2, abreviado por su acrónimo TF2, es un videojuego multijugador de disparos en primera persona desarrollado 
+                y publicado por Valve Corporation. Es la secuela del mod de 1996 para Quake del mismo nombre y su remake de 1999, Team 
+                Fortress Classic. Fue lanzado por primera vez como parte de la recopilación de videojuegos The Orange Box el 10 de octubre 
+                de 2007 para Windows y Xbox 360. Posteriormente se lanzó también una versión para PlayStation 3. Más tarde, el 8 de abril
+                 de 2008, se lanzó de forma independiente para Windows a través de la plataforma de Valve y dos años más tarde para OS X;
+                  finalmente el 14 de febrero de 2013 fue lanzado para Linux. Las únidades físicas se vendían bajo el control de Electronic
+                   Arts, mientras que la distribución en línea de Team Fortress 2 se realizaba desde la plataforma de Steam, donde actualmente
+                    sigue como free-to-play desde el 23 de junio de 2011. Además cuenta con microtransacciones e intercambio de armas en el juego a través de Steam.
+                En este juego los jugadores deben elegir entre uno de los dos equipos y una de las 9 clases de personajes para jugar en
+                 distintos modos como capturar la bandera o rey de la colina. El desarrollo lo lideraron John Cook y Robin Walker, 
+                 desarrolladores del mod original de Team Fortress para Quake. Team Fortress 2 se anunció en 1998 bajo el nombre Team
+                  Fortress 2: Brotherhood of Arms </p>
             </div></div>
 
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <H2>Plataformas</H2><br>
-                <p> </p>
+                <p>° PC </p>
                 <P> </P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
+                <a href="https://www.youtube.com/watch?v=N7ZafWA2jd8" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="" target="_blank">
-                    <img src="" alt="Juego PC" class="logoY"></a></p>
+                <p class="centrar" ><a href="https://store.steampowered.com/app/440/Team_Fortress_2/?l=spanish" target="_blank">
+                    <img src="../img/PC/logoSteam.jpg" alt="Juego PC" class="logoY"></a></p>
             </div>
         </div>
 
