--- a/PROYECTO SEMESTRAL/Exclusivo Play/BATMAN_ARKHAM_KNIGHT.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/BATMAN_ARKHAM_KNIGHT.html
@@ -25,7 +25,7 @@
         <br><br>
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PLAYSTATION/batman arkham knight.jpeg" alt="sin imagen">
+            <img class="img" src="../img/PLAYSTATION/batman arkham knight.jpeg" alt="sin imagen"><h4>BATMAN ARKHAM KNIGHT</h4>
            </div> 
            <div class="col-md-8 col-sm-12">
             <h2>Descripcion</h2><br>
