--- a/PROYECTO SEMESTRAL/Exclusivo Play/HORIZON FORBIDES WEST.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/HORIZON FORBIDES WEST.html
@@ -26,7 +26,7 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PLAYSTATION/horizon forbides west.jpeg" alt="sin imagen">
+            <img class="img" src="../img/PLAYSTATION/horizon forbides west.jpeg" alt="sin imagen"><h2>HORIZON FORBIDES WEST</h2>
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
