--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/FIRE EMBLEM WARRIORS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/FIRE EMBLEM WARRIORS.html
@@ -26,7 +26,7 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/NINTENDO/fire_emblem_warriors.jpg" alt="sin imagen"><H4>FIRE EMBLEM WARRIORS</H4>
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
