--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/MARIO KART 8.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/MARIO KART 8.html
@@ -26,7 +26,7 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/NINTENDO/mario-kart-8-deluxe.webp" alt="sin imagen"><H2>MARIO KART 8</H2>
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
