--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/SPLATOON 2.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/SPLATOON 2.html
@@ -26,7 +26,7 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/NINTENDO/splatoon_2.webp" alt="sin imagen"><H2>SPLATOON 2</H2>
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
