--- a/PROYECTO SEMESTRAL/Exclusivo PC/BATTLE TECH.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/BATTLE TECH.html
@@ -26,7 +26,7 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PC/BattleTech.png" alt="sin imagen">
+            <img class="img" src="../img/PC/BattleTech.png" alt="sin imagen"><h2>BATTLE TECH</h2>
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
