--- a/PROYECTO SEMESTRAL/Exclusivo PC/COUNTER STRIKE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/COUNTER STRIKE.html
@@ -26,7 +26,7 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PC/counter strike.webp" alt="sin imagen">
+            <img class="img" src="../img/PC/counter strike.webp" alt="sin imagen"><h2>CS:GO</h2>
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
