--- a/PROYECTO SEMESTRAL/Exclusivo PC/ESCAPE FROM TARKOV.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/ESCAPE FROM TARKOV.html
@@ -26,7 +26,7 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PC/Escape from Tarkov.jpg" alt="sin imagen">
+            <img class="img" src="../img/PC/Escape from Tarkov.jpg" alt="sin imagen"><h4>ESCAPE FROM TARKOV</h4>
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
