--- a/PROYECTO SEMESTRAL/Exclusivo PC/TEAM FOREST.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/TEAM FOREST.html
@@ -26,7 +26,7 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PC/team forest.jpg" alt="sin imagen">
+            <img class="img" src="../img/PC/team forest.jpg" alt="sin imagen"><h3>TEAM FORTRESS 2</h3>
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
