--- a/PROYECTO SEMESTRAL/Exclusivo Play/GHOST OF TSUSHIMA.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/GHOST OF TSUSHIMA.html
@@ -26,7 +26,7 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PLAYSTATION/ghost os tsushima.jpeg" alt="sin imagen">
+            <img class="img" src="../img/PLAYSTATION/ghost os tsushima.jpeg" alt="sin imagen"><h2>GHOST OS TSUSHIMA</h2>
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
