--- a/PROYECTO SEMESTRAL/Exclusivo Play/HORIZON ZERO DAWN.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/HORIZON ZERO DAWN.html
@@ -26,7 +26,7 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <a><img class="img" src="../img/PLAYSTATION/horizon zero dawn.jpeg" alt="sin imagen"></a>
+            <a><img class="img" src="../img/PLAYSTATION/horizon zero dawn.jpeg" alt="sin imagen"></a><h2>HORIZON ZERO DAWN</h2>
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
