--- a/PROYECTO SEMESTRAL/Exclusivo Play/THE LAST OF US.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/THE LAST OF US.html
@@ -26,7 +26,7 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PLAYSTATION/the last of as part ll.jpeg" alt="sin imagen">
+            <img class="img" src="../img/PLAYSTATION/the last of as part ll.jpeg" alt="sin imagen"><h2>THE LAST OF US PART II</h2>
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
