--- a/PROYECTO SEMESTRAL/Exclusivo Play/THE SURGE 2.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/THE SURGE 2.html
@@ -26,7 +26,7 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PLAYSTATION/the surge 2.jpeg" alt="sin imagen">
+            <img class="img" src="../img/PLAYSTATION/the surge 2.jpeg" alt="sin imagen"><h2>THE SURGE 2</h2>
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
