--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/A PLAGUE TALE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/A PLAGUE TALE.html
@@ -26,7 +26,7 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/XBOX/A PLAGUE TALE.jpeg" alt="sin imagen">
+            <img class="img" src="../img/XBOX/A PLAGUE TALE.jpeg" alt="sin imagen"><H2>A PLAGUE TALE</H2>
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
