--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/GEARS OF WAR 3.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/GEARS OF WAR 3.html
@@ -26,7 +26,7 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/XBOX/GEARS OF WAR 3.jpg" alt="sin imagen">
+            <img class="img" src="../img/XBOX/GEARS OF WAR 3.jpg" alt="sin imagen"><H2>GEARS OF WAR 3</H2>
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
