--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/NO MANS SKY.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/NO MANS SKY.html
@@ -26,7 +26,7 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/XBOX/NO MANS SKY.jpeg" alt="sin imagen"><H2>NO MANS SKY</H2>
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
