--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/deadrising.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/deadrising.html
@@ -25,7 +25,7 @@
         <br><br>
         <div class="row">
            <div class="col-md-4">
-            <img class="img" src="../img/XBOX/DEAD RISING.jfif" alt="sin imagen">
+            <img class="img" src="../img/XBOX/DEAD RISING.jfif" alt="sin imagen"><H2>DEAD RISING</H2>
            </div> 
            <div class="col-md-8">
             <h2>Descripcion</h2><br>
