--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/PAYDAY 2.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/PAYDAY 2.html
@@ -41,11 +41,11 @@
                 <P> </P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
+                <a href="https://www.youtube.com/watch?v=Z2tmHMIA1sU" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="" target="_blank">
+                <p class="centrar" ><a href="https://www.xbox.com/es-CL/games/store/payday-2-crimewave-edition/c2z9d406g0kq" target="_blank">
                     <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
             </div>
         </div>
